# learning-vulkan-engine

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CppProperties.json  README.md  build-all.bat
application/: CMakeLists.txt  EntryPoint.cpp
engine/: build.bat
engine/src/: defines.h  test.c
project-egg-core/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Game.cpp  Game.h  Render.cpp  Render.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp  project-egg-core.aps  project-egg-core.cpp  project-egg-core.rc  project-egg-core.sln  project-egg-core.vcxproj  project-egg-core.vcxproj.filters  resource.h
project-egg-core/Application/: CMakeLists.txt
project-egg-core/Assets/background/: night-forest.tmx
project-egg-core/src/: CMakeLists.txt  main.cpp
project-egg-core/src/Animation/: Animation.cpp  Animation.h
project-egg-core/src/Characters/: Character.cpp  Character.h  Ghost.cpp  Ghost.h  Warrior.cpp  Warrior.h
project-egg-core/src/Core/: AssetManager.cpp  AssetManager.h  Engine.cpp  Engine.h  EventsHandler.cpp  EventsHandler.h  InputSystem.cpp  InputSystem.h  Render.cpp  Renderer.cpp  Renderer.h  Window.cpp  Window.h
project-egg-core/src/Graphics/: AssetManager.cpp  AssetManager.h  AssetProperties.h  DrawFrameStrategy.cpp  DrawFrameStrategy.h  RenderProperties.h  Renderer.cpp  Renderer.h
project-egg-core/src/Inputs/: InputSystem.cpp  InputSystem.h
project-egg-core/src/Map/: GameMap.cpp  GameMap.h  Layer.h  MapParser.cpp  MapParser.h  TileLayer.cpp  TileLayer.h
project-egg-core/src/Object/: GameObject.cpp  GameObject.h  IObject.h  ObjectProperties.h
project-egg-core/src/Physics/: RigidBody.cpp  RigidBody.h  Transform.cpp  Transform.h  Vector2D.cpp  Vector2D.h
project-egg-core/src/Timer/: Timer.cpp  Timer.h
src/: CMakeLists.txt  EngineCore.cpp  EngineRenderer.cpp  EngineWindow.cpp  RendererSwapChain.cpp  VulkanBase.cpp  vk_engine.cpp
src/include/: EngineCore.h  EngineCore.hpp  EngineDevices.h  EngineExtent.h  EngineRenderer.h  EngineTypes.h  EngineWindow.h  RendererSwapChain.h  ShaderRecources.hpp  VulkanBase.hpp  VulkanTests.hpp  vk_engine.h  vk_engine.hpp  vk_init.h  vk_init.hpp  vk_types.h  vk_types.hpp
testbed/: build.bat
testbed/src/: main.c
